--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Isabella Tolêdo</title>
+    <link href="./css/styles.css" rel="stylesheet"/>
 </head>
 <body>
     <header id="inicio">
         <nav>
-            <ul>
+            <span>Isabella Tolêdo</span>
+            <ul class="navigation-items">
                 <li><a href="#inicio">Início</a></li>
                 <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#servicos">Serviços</a>></li>
